<resources>
    <string name="app_name">News_App</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="all">All</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="account">Account</string>
    <string name="bookmark">Bookmark</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="bookmark_empty">Bookmark is empty</string>
    <string name="retry">Retry</string>
    <string name="go_to_news_page">Go to news page</string>
    <string name="share">Share</string>

    <!--preferences-->
    <string name="themeKey">theme</string>
    <string name="countryKey">country</string>
    <string name="languageKey">language</string>

    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="turn_off_dark_mode">Turn off dark theme</string>
    <string name="turn_on_dark_mode">Turn on dark theme</string>

    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="welcome_back">Welcome back</string>
    <string name="search_for_news">Search for news..</string>

</resources>

